# projeto-listas

./: .gitignore  README.md  checagem.py  lists_update.py  main.py  planilhas.py  pyproject.toml
pipeline/: __init__.py  main.py
pipeline/extract/: __init__.py  csv_extractor.py  utils.py  xlsx_extractor.py
pipeline/load/: __init__.py
pipeline/transform/: __init__.py  normalizer.py  union.py
