[project]
name = "modelagem-e-tratamento-de-listas"
version = "3.13.7"
description = "Modelagem e Tratamento"
authors = [
    {name = "Ygor Rodrigues",email = "ygorsarmento@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi (>=0.133.1,<0.134.0)",
    "requests (>=2.32.5,<3.0.0)",
    "responses (>=0.26.0,<0.27.0)",
    "response (>=0.5.0,<0.6.0)",
    "notebook (>=7.5.5,<8.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
